deploy/azure/sample/account/develop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
  labels:
    app: account
spec:
  selector:
    app: account
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
